Minor layout change for main activity

--- a/AugMeal/res/values/strings.xml
+++ b/AugMeal/res/values/strings.xml
@@ -3,11 +3,10 @@
 
     <string name="app_name">AugMeal</string>
     <string name="action_settings">Settings</string>
-    <string name="nearby">Display Nearby Venues</string>
+    <string name="nearby">Explore Nearby</string>
     <string name="title_activity_venues">Nearby Venues</string>
-    <string name="loading">Loading Location...</string>
+    <string name="loading">Loading Location</string>
     <string name="title_activity_info">InfoActivity</string>
-    <string name="hello_world">Hello world!</string>
     <string name="title_activity_dishes">DishesActivity</string>
     <string name="title_activity_menue">MenueActivity</string>
     <string name="compass_accuracy_low">Please re-calibrate compass</string>
